[project]
name = "drug-interaction-env"
version = "0.1.0"
description = "A reinforcement learning environment for medical prescription safety analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core",
    "requests",
    "openai",
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.envs"]
drug_interaction_env = "drug_interaction_env"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"
